Basic EPUB view added (EPUBActivity).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">LWEPUBReader</string>
     <string name="mylibrary">Mi biblioteca</string>
+
+    <string name="title_activity_epub">EPUBActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
