--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,12 @@
 
     <string name="loading_dialog_title">Importando...</string>
     <string name="loading_dialog_message">Se están importando los libros que has seleccionado.</string>
-    <string name="infinite_loading_dialog_message">Buscando epubs en tu dispositivo...</string>
+    <string name="infinite_loading_dialog_message">Buscando epubs, espera un momento por favor...</string>
     <string name="loading_dialog_message_book">Libro: </string>
+
+    <string name="books_already_imported">Libros importados :)</string>
+    <string name="book_deleted">Libro borrado de la lista</string>
+    <string name="book_moved_to_read">Libro movido a \'Leidos\'</string>
 
     <string name="file_chooser_dialog_title">Libros para importar</string>
 
@@ -30,6 +34,8 @@
 
     <string name="action_settings">Configuración</string>
     <string name="action_delete_all">Borrar librería</string>
+    <string name="action_dropbox">Importar desde Dropbox</string>
+    <string name="action_drive">Importar desde Drive</string>
 
     <string name="button_add">Añadir</string>
     <string name="button_select_all">Marcar todos</string>
@@ -39,10 +45,46 @@
     <string name="book_author">Escrito por:</string>
     <string name="book_added">Añadido:</string>
     <string name="book_last_read">Última lectura:</string>
+    <string name="book_translation_config">Traducción:</string>
 
     <string name="delete_all_dialog_title">Borrar todos</string>
     <string name="delete_all_dialog_message">¿Quiere eliminar toda su librería? Los archivos no se borrarán del dispositivo</string>
 
+    <string name="import_from_dropbox_dialog_title">Importar desde Dropbox</string>
+    <string name="dropbox_terms_message">Vas a proceder a sincronizar esta aplicación con Dropbox. SwiftReader: \n 1. No hará uso de ningún dato acerca de tu cuenta de Dropbox (email, usuario, etc.) \n 2. Solo y exclusivamente obtendrá los archivos con extensión epub que previamente hayas seleccionado.\n ¿Quieres continuar?</string>
+
     <string name="loading">Cargando...</string>
+
+    <string name="developedby">Desarrollado por:</string>
+    <string name="me">Carlos Albaladejo Pérez (karlozalb)</string>
+    <string name="version">1.0</string>
+    <string name="year">2016</string>
+    <string name="epubrendering">EPUB rendering thanks to Futurepress epub.js library</string>
+
+    <string name="dropbox_app_key">ss3w7508nyebr8i</string>
+
+    <string name="translate_action_button">Traducir</string>
+
+    <string-array name="languages_list">
+        <item>Español -> English</item>
+        <item>Español -> Français</item>
+        <item>Español -> Português</item>
+        <item>English -> Español</item>
+        <item>English -> Français</item>
+        <item>English -> Italiano</item>
+        <item>English -> Português</item>
+        <item>English -> Deutsch</item>
+        <item>Français -> Español</item>
+        <item>Français -> English</item>
+        <item>Italiano -> English</item>
+        <item>Deutsch -> English</item>
+        <item>Português -> English</item>
+    </string-array>
+
+    <string-array name="color_modes">
+        <item>Blanco</item>
+        <item>Sepia</item>
+        <item>Negro</item>
+    </string-array>
 
 </resources>
